@@ -1,5 +1,9 @@
 2003-06-16 Damien Sandras  <dsandras@seconix.com>
 
+	* src/main_window.cpp: Stop tones on key presses.
+	
+2003-06-16 Damien Sandras  <dsandras@seconix.com>
+
 	* src/gatekeeper.cpp: Fixed bug when unregistering from a GK.
 	
 2003-06-16 Damien Sandras  <dsandras@seconix.com>
